fix(authoring): prevent dropdown rendering if not visible
SD-3942

--- a/styles/less/sf-additional.less
+++ b/styles/less/sf-additional.less
@@ -459,6 +459,10 @@
                     font-size: 12px;
                     font-weight: bold;
                 }
+
+                em {
+                    font-size: 11px;
+                }
             }
         }
     }
